--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ ul{
   list-style-position: inside;
   margin-left: 15px;
 }
+ul.obj{
+  list-style-position: outside;
+  margin-left: 30px;
+}
+
 table , th,td{
   border:1px solid black;
   border-collapse: collapse;
